[project]
name = "pythonproject10"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei Makarov",email = "aomak@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
python-dotenv = "^1.1.0"

[black]
max-line-length = 119

[mypy]
max-line-length = 119

[isort]
max-line-length = 119

